--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,15 +6,15 @@ plugins {
 }
 
 android {
-    buildToolsVersion '30.0.2'
+    buildToolsVersion '30.0.3'
     compileSdkVersion 30
 
     defaultConfig {
         applicationId "org.mediasoup.droid.demo"
         minSdkVersion 18
         targetSdkVersion 30
-        versionCode 4
-        versionName "1.3"
+        versionCode 5
+        versionName "1.4"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
         ndk {
@@ -47,6 +47,8 @@ android {
     kotlinOptions {
         freeCompilerArgs = ['-Xjsr305=strict']
         jvmTarget = '1.8'
+        apiVersion = '1.5'
+        languageVersion = '1.5'
     }
 
     compileOptions {
@@ -62,33 +64,35 @@ android {
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib"
+    implementation(platform("org.jetbrains.kotlin:kotlin-bom:$kotlin_version"))
+    implementation(platform("com.squareup.okhttp3:okhttp-bom:4.9.1"))
+
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib'
 
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation "androidx.core:core:1.3.2"
-    implementation 'androidx.core:core-ktx:1.3.2'
+    implementation 'androidx.appcompat:appcompat:1.3.0'
+    implementation 'androidx.core:core-ktx:1.5.0'
     implementation 'androidx.cardview:cardview:1.0.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
-    implementation 'androidx.fragment:fragment-ktx:1.2.5'
-    implementation 'androidx.preference:preference:1.1.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'androidx.fragment:fragment-ktx:1.3.5'
+    implementation 'androidx.preference:preference-ktx:1.1.1'
     testImplementation 'junit:junit:4.13'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3-beta02'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0-beta02'
 
-    implementation 'org.permissionsdispatcher:permissionsdispatcher:4.8.0'
-    kapt 'org.permissionsdispatcher:permissionsdispatcher-processor:4.8.0'
+    implementation 'com.github.permissions-dispatcher:permissionsdispatcher:4.8.0'
+    kapt 'com.github.permissions-dispatcher:permissionsdispatcher-processor:4.8.0'
 
     implementation 'org.protoojs.droid:protoo-client:4.0.3'
     implementation 'io.github.zncmn.mediasoup:libmediasoup-android:0.2.0'
 
-    implementation 'com.squareup.okhttp3:okhttp:4.8.1'
-    implementation 'com.squareup.okhttp3:logging-interceptor:4.8.1'
+    implementation 'com.squareup.okhttp3:okhttp'
+    implementation 'com.squareup.okhttp3:logging-interceptor'
     implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
-    implementation 'io.reactivex.rxjava3:rxjava:3.0.5'
-    implementation 'io.reactivex.rxjava3:rxkotlin:3.0.0'
+    implementation 'io.reactivex.rxjava3:rxjava:3.0.13'
+    implementation 'io.reactivex.rxjava3:rxkotlin:3.0.1'
 
     implementation 'com.jakewharton.timber:timber:4.7.1'
 }
