--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,8 +38,6 @@ android {
         dataBinding = true
     }
 
-    ndkVersion '21.3.6528147'
-
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
     }
@@ -78,15 +76,15 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.fragment:fragment-ktx:1.3.5'
     implementation 'androidx.preference:preference-ktx:1.1.1'
-    testImplementation 'junit:junit:4.13'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3-beta02'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0-beta02'
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3-rc01'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0-rc01'
 
     implementation 'com.github.permissions-dispatcher:permissionsdispatcher:4.8.0'
     kapt 'com.github.permissions-dispatcher:permissionsdispatcher-processor:4.8.0'
 
     implementation 'org.protoojs.droid:protoo-client:4.0.3'
-    implementation 'io.github.zncmn.mediasoup:libmediasoup-android:0.2.0'
+    implementation 'io.github.crow-misia.libmediasoup-android:libmediasoup-android:0.3.0'
 
     implementation 'com.squareup.okhttp3:okhttp'
     implementation 'com.squareup.okhttp3:logging-interceptor'
