--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
 
     defaultConfig {
         applicationId "org.mediasoup.droid.demo"
-        minSdkVersion 18
+        minSdkVersion 21
         targetSdkVersion 30
         versionCode 5
         versionName "1.4"
@@ -71,20 +71,21 @@ dependencies {
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.3.0'
-    implementation 'androidx.core:core-ktx:1.5.0'
+    implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.fragment:fragment-ktx:1.3.5'
     implementation 'androidx.preference:preference-ktx:1.1.1'
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3-rc01'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0-rc01'
+    androidTestImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     implementation 'com.github.permissions-dispatcher:permissionsdispatcher:4.8.0'
     kapt 'com.github.permissions-dispatcher:permissionsdispatcher-processor:4.8.0'
 
     implementation 'org.protoojs.droid:protoo-client:4.0.3'
-    implementation 'io.github.crow-misia.libmediasoup-android:libmediasoup-android:0.3.0'
+    implementation 'io.github.crow-misia.libmediasoup-android:libmediasoup-android:0.4.0'
 
     implementation 'com.squareup.okhttp3:okhttp'
     implementation 'com.squareup.okhttp3:logging-interceptor'
